--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -6,7 +6,34 @@
         xmlns:local="clr-namespace:Spotter_group"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,1">
+            <GradientStop Color="Black" Offset="0"/>
+            <GradientStop Color="#666666" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
-        
+        <Menu FontStyle="Normal" Height="20" VerticalAlignment="Top">
+            <Menu.Background>
+                <LinearGradientBrush>
+                </LinearGradientBrush>
+            </Menu.Background>
+            <MenuItem Header="User Profile" >
+                <MenuItem Header="New User" />
+                <MenuItem Header="Existing User"/>
+            </MenuItem>
+            <MenuItem Header="Workouts"/>
+            <MenuItem Header="Nutrition"/>
+            <MenuItem Header="Calendar"/>
+        </Menu>
+
+        <StackPanel Margin="30" Width="auto">
+            <Label>First Name</Label>
+            <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+            <Label Margin="0,10,0,0">Last Name</Label>
+            <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+            <Label Margin="0,10,0,0">Birthdate</Label>
+            <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
+        </StackPanel>
     </Grid>
 </Window>
