--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -30,6 +30,8 @@
         <StackPanel Margin="30" Width="auto">
             <Label>First Name</Label>
             <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+            <Label>First Name</Label>
+            <TextBox Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
             <Label Margin="0,10,0,0">Last Name</Label>
             <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
             <Label Margin="0,10,0,0">Birthdate</Label>
