--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -18,22 +18,24 @@
                 <LinearGradientBrush>
                 </LinearGradientBrush>
             </Menu.Background>
-            <MenuItem Header="User Profile" >
-                <MenuItem Header="New User" />
-                <MenuItem Header="Existing User"/>
+            <MenuItem Foreground="#FFE0E0E0" Header="User Profile" >
+                <MenuItem Foreground="#FFE0E0E0" Header="New User" />
+                <MenuItem Foreground="#FFE0E0E0" Header="Existing User"/>
             </MenuItem>
-            <MenuItem Header="Workouts"/>
-            <MenuItem Header="Nutrition"/>
-            <MenuItem Header="Calendar"/>
+            <MenuItem Foreground="#FFE0E0E0" Header="Workouts"/>
+            <MenuItem Foreground="#FFE0E0E0" Header="Nutrition"/>
+            <MenuItem Foreground="#FFE0E0E0" Header="Calendar"/>
         </Menu>
 
-        <StackPanel Margin="30" Width="auto">
-            <Label>First Name</Label>
+        <StackPanel Margin="50" Width="auto">
+            <Label Foreground="#FFE0E0E0">First Name</Label>
             <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Margin="0,10,0,0">Last Name</Label>
+            <Label Foreground="#FFE0E0E0" Margin="0,10,0,0">Last Name</Label>
             <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Margin="0,10,0,0">Birthdate</Label>
+            <Label Foreground="#FFE0E0E0" Margin="0,10,0,0">Birthdate</Label>
             <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
         </StackPanel>
+        <Frame x:Name="frame" Content="Frame" HorizontalAlignment="Left" Height="256" VerticalAlignment="Top" Width="457" Margin="30,35,0,0"
+               Background="Black" Panel.ZIndex="-1" BorderBrush="#009999" BorderThickness="5"/>
     </Grid>
 </Window>
