--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Spotter_group"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="525
+        " Width="785">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,1">
             <GradientStop Color="gray" Offset="0"/>
@@ -35,7 +36,7 @@
             <Label Foreground="#FFE0E0E0" Margin="0,10,0,0">Birthdate</Label>
             <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
         </StackPanel>
-        <Frame x:Name="frame" Content="Frame" HorizontalAlignment="Left" Height="256" VerticalAlignment="Top" Width="457" Margin="30,35,0,0"
+        <Frame x:Name="frame" Content="Frame" HorizontalAlignment="Left" Height="429" VerticalAlignment="Top" Width="712" Margin="30,35,0,0"
                Background="Black" Panel.ZIndex="-1" BorderBrush="#009999" BorderThickness="5"/>
     </Grid>
 </Window>
