--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -35,6 +35,7 @@
             <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
             <Label Foreground="#FFE0E0E0" Margin="0,10,0,0">Birthdate</Label>
             <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
+            <Image x:Name="image" Height="204" Margin="0,0,30,0" Source="images/thundercat.png" HorizontalAlignment="Right" Width="132"/>
         </StackPanel>
         <Frame x:Name="frame" Content="Frame" HorizontalAlignment="Left" Height="429" VerticalAlignment="Top" Width="712" Margin="30,35,0,0"
                Background="Black" Panel.ZIndex="-1" BorderBrush="#009999" BorderThickness="5"/>
