--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Spotter_group"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="560" Width="820">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,1">
             <GradientStop Color="gray" Offset="0"/>
             <GradientStop Color="#666666" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
-    <Grid>
+    <Grid Name="gridOutter">
         <Menu FontStyle="Normal" Height="20" VerticalAlignment="Top">
             <Menu.Background>
                 <LinearGradientBrush>
@@ -26,17 +26,26 @@
             <MenuItem Header="Nutrition"/>
             <MenuItem Header="Calendar"/>
         </Menu>
-
-        <StackPanel Margin="30" Width="auto">
-            <Label>First Name</Label>
-            <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label>First Name</Label>
-            <TextBox Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Margin="0,10,0,0">Last Name</Label>
-            <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Margin="0,10,0,0">Birthdate</Label>
-            <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
-            <Label>Shane label</Label>
-        </StackPanel>
+        <UserControl Margin="64,43,59.6,37.4"
+                     Background="#009999"
+                     Height="450"
+                     Width="590">
+            <Grid Name="grid2"
+                  Height="440"
+                  Width="580"
+                  Background="Black">
+                <StackPanel Margin="30" Width="auto">
+                    <Label>First Name</Label>
+                    <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+                    <Label>First Name</Label>
+                    <TextBox Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+                    <Label Margin="0,10,0,0">Last Name</Label>
+                    <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+                    <Label Margin="0,10,0,0">Birthdate</Label>
+                    <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
+                    <Label>Shane label</Label>
+                </StackPanel>
+            </Grid>
+        </UserControl>
     </Grid>
 </Window>
