--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Spotter_group"
         mc:Ignorable="d"
-        Title="MainWindow" Height="560" Width="820">
+        Title="MainWindow" WindowState="Maximized"
+        WindowStyle="None">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,1">
             <GradientStop Color="gray" Offset="0"/>
@@ -26,22 +27,19 @@
             <MenuItem Header="Nutrition"/>
             <MenuItem Header="Calendar"/>
         </Menu>
-        <UserControl Margin="64,43,59.6,37.4"
-                     Background="#009999"
-                     Height="450"
-                     Width="590">
+        <UserControl Margin="70,50,70,50"
+                     Background="#009999">
             <Grid Name="grid2"
-                  Height="440"
-                  Width="580"
-                  Background="Black">
+                  Background="Black"
+                  Margin="5">
                 <StackPanel Margin="30" Width="auto">
                     <Label Foreground ="#FFE0E0E0">First Name</Label>
                     <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-                    <Label>First Name</Label>
+                    <Label Foreground ="#FFE0E0E0">First Name</Label>
                     <TextBox Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-                    <Label Margin="0,10,0,0">Last Name</Label>
+                    <Label Foreground ="#FFE0E0E0" Margin="0,10,0,0">Last Name</Label>
                     <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-                    <Label Margin="0,10,0,0">Birthdate</Label>
+                    <Label Foreground ="#FFE0E0E0" Margin="0,10,0,0">Birthdate</Label>
                     <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
                     <Label>Shane label</Label>
                 </StackPanel>
