--- a/Spotter_group/Register.xaml
+++ b/Spotter_group/Register.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Spotter_group.Profile"
+﻿<UserControl x:Class="Spotter_group.Register"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,11 +9,11 @@
     <Grid>
         <StackPanel Margin="30" Width="auto">
             <Label Foreground ="#FFE0E0E0">First Name</Label>
-            <TextBox IsReadOnly="True" Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+            <TextBox Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
             <Label Foreground ="#FFE0E0E0">First Name</Label>
-            <TextBox IsReadOnly="True" Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+            <TextBox Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
             <Label Foreground ="#FFE0E0E0" Margin="0,10,0,0">Last Name</Label>
-            <TextBox IsReadOnly="True" Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
+            <TextBox Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
             <Label Foreground ="#FFE0E0E0" Margin="0,10,0,0">Birthdate</Label>
             <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
             <Label>Shane label</Label>
