--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -7,6 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Calendar Name="calendar" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                  Margin="20" SelectionMode="SingleRange" IsTodayHighlighted="True" />
+
     </Grid>
 </UserControl>
