--- a/Spotter_group/Details.xaml
+++ b/Spotter_group/Details.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Spotter_group.Calendar"
+﻿<UserControl x:Class="Spotter_group.Details"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,7 @@
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Height="299" Margin="0">
-        <Calendar Name="calendar" HorizontalAlignment="Center" VerticalAlignment="Center" 
-                  Margin="20" SelectionMode="SingleRange" IsTodayHighlighted="True" 
-                  Background="#009999" BorderBrush="#666666" BorderThickness="5"
-                  Height="200" Width="200"/>
-
+    <Grid>
+            
     </Grid>
 </UserControl>
