--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -6,11 +6,10 @@
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Height="299" Margin="0">
+    <Grid>
         <Calendar Name="calendar" HorizontalAlignment="Center" VerticalAlignment="Center" 
                   Margin="20" SelectionMode="SingleRange" IsTodayHighlighted="True" 
                   Background="#009999" BorderBrush="#666666" BorderThickness="5"
-                  Height="200" Width="200"/>
-
+                  Height="200" Width="200" PreviewDragOver="calendar_PreviewDragOver"/>
     </Grid>
 </UserControl>
