--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -7,23 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Height="299" Margin="0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Calendar Grid.Column="1" Grid.ColumnSpan="3" Name="calendar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
-                  Margin="0" SelectionMode="SingleRange" IsTodayHighlighted="True" 
+        <Calendar Name="calendar" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                  Margin="20" SelectionMode="SingleRange" IsTodayHighlighted="True" 
                   Background="#009999" BorderBrush="#666666" BorderThickness="5"
                   Height="200" Width="200"/>
-        <Label x:Name="todaysWorkout" Grid.Column="1" Grid.Row="1" Foreground="White">Workout Label</Label>
-        <Label x:Name="todaysNutrition" Grid.Column="3" Grid.Row="1" Foreground="White">Nutrition Label</Label>
+
     </Grid>
 </UserControl>
