--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -37,17 +37,9 @@
             <Grid Name="grid2"
                   Background="Black"
                   Margin="5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Button x:Name="btnSign_in" Grid.Row="1" Content="Sign In" Height="60" Width="125"/>
-                <Button x:Name="btnReg" Grid.Column="1" Grid.Row="1" Content="Register" Height="60" Width="125" Click="btnReg_Click"/>
-                <Image Name="imgMainWindowSplash"  Margin="45" Grid.ColumnSpan="2" Source="images/Graphics/blue boy lifter.png"></Image>
+                <Button x:Name="btnSign_in"  Content="Sign In" Height="60" Width="125" Panel.ZIndex="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,100,32"/>
+                <Button x:Name="btnReg"  Grid.Row="1" Content="Register" Height="60" Width="125" Click="btnReg_Click" Panel.ZIndex="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="100,0,0,35"/>
+                <Image Name="imgMainWindowSplash"  Margin="85,65,85,115" Source="images/Graphics/blue boy lifter.png"></Image>
             </Grid>
         </UserControl>
     </Grid>
