--- a/Spotter_group/Nutrition.xaml
+++ b/Spotter_group/Nutrition.xaml
@@ -17,85 +17,104 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="3*"/>
+           
+           
         </Grid.RowDefinitions>
         <Menu Grid.ColumnSpan="4" Margin="0,0,0,0" Height="19" VerticalAlignment="Top" HorizontalAlignment="Left">
             <MenuItem Header="Workout" Grid.ColumnSpan="3"></MenuItem>
             <MenuItem Header="Nutrition" Grid.ColumnSpan="3" IsChecked="True"></MenuItem>
         </Menu>
-        <Label Grid.Column="4" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right">Calories to Consume</Label>
-        <Label x:Name="lbl_CaloriesToConsume" Foreground="White" Grid.Column="4" VerticalAlignment="Bottom" HorizontalAlignment="Right">2000</Label>
+        <StackPanel Grid.Column="4" Margin="10">
+            <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Right">Calories to Consume</Label>
+            <Label x:Name="lbl_CaloriesToConsume" Foreground="White" Grid.Column="4" HorizontalAlignment="Right">2000</Label>
+        </StackPanel>
+        
         <Label Foreground="White" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Proteins</Label>
         <Label Foreground="White" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center">Vegetables</Label>
         <Label Foreground="White" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center">Fruits</Label>
         <Label Foreground="White" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center">Alcohol</Label>
         <Label Foreground="White" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center">Misc</Label>
-        <ComboBox Grid.Column="0" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Proteins" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
-            <ComboBoxItem>Chicken</ComboBoxItem>
-            <ComboBoxItem>Turkey</ComboBoxItem>
-            <ComboBoxItem>Pork</ComboBoxItem>
-            <ComboBoxItem>Meat</ComboBoxItem>
-            <ComboBoxItem>Fish</ComboBoxItem>
-            <ComboBoxItem>Eggs</ComboBoxItem>
-            <ComboBoxItem>Tofu</ComboBoxItem>
-            <ComboBoxItem>Other</ComboBoxItem>
-        </ComboBox>
-        <Label Foreground="White" Grid.Column="0" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-        <TextBox Grid.Column="0" Grid.Row="4" Height="20" Margin="5"> </TextBox>
-        <ComboBox Grid.Column="1" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Vegetables" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
-            <ComboBoxItem>Asparagus</ComboBoxItem>
-            <ComboBoxItem>Broccoli</ComboBoxItem>
-            <ComboBoxItem>Potato</ComboBoxItem>
-            <ComboBoxItem>Brussel Sprouts</ComboBoxItem>
-            <ComboBoxItem>Kale</ComboBoxItem>
-            <ComboBoxItem>Lettuce</ComboBoxItem>
-            <ComboBoxItem>Spinach</ComboBoxItem>
-            <ComboBoxItem>Beets</ComboBoxItem>
-            <ComboBoxItem>Carrots</ComboBoxItem>
-            <ComboBoxItem>Cauliflower</ComboBoxItem>
-            <ComboBoxItem>Bell Pepper</ComboBoxItem>
-            <ComboBoxItem>Other</ComboBoxItem>
-        </ComboBox>
-        <Label Foreground="White" Grid.Column="1" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-        <TextBox Grid.Column="1" Grid.Row="4" Height="20" Margin="5"></TextBox>
-        <ComboBox Grid.Column="2" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Fruits" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
-            <ComboBoxItem>Pineapple</ComboBoxItem>
-            <ComboBoxItem>Apple</ComboBoxItem>
-            <ComboBoxItem>Blueberry</ComboBoxItem>
-            <ComboBoxItem>Pear</ComboBoxItem>
-            <ComboBoxItem>Orange</ComboBoxItem>
-            <ComboBoxItem>Grapes</ComboBoxItem>
-            <ComboBoxItem>Grapefruit</ComboBoxItem>
-            <ComboBoxItem>Watermelon</ComboBoxItem>
-            <ComboBoxItem>Banana</ComboBoxItem>
-            <ComboBoxItem>Kiwi</ComboBoxItem>
-            <ComboBoxItem>Avocado</ComboBoxItem>
-            <ComboBoxItem>Other</ComboBoxItem>
-        </ComboBox>
-        <Label Foreground="White" Grid.Column="2" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-        <TextBox Grid.Column="2" Grid.Row="4" Height="20" Margin="5"></TextBox>
-        <ComboBox Grid.Column="3" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Alcohol" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
-            <ComboBoxItem>Light Beer</ComboBoxItem>
-            <ComboBoxItem>Heavy Beer</ComboBoxItem>
-            <ComboBoxItem>Wine</ComboBoxItem>
-            <ComboBoxItem>Liquor</ComboBoxItem>
-            <ComboBoxItem>Other</ComboBoxItem>
-        </ComboBox>
-        <Label Foreground="White" Grid.Column="3" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-        <TextBox Grid.Column="3" Grid.Row="4" Height="20" Margin="5"></TextBox>
-        <ComboBox Grid.Column="4" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Misc" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
-            <ComboBoxItem>Nuts</ComboBoxItem>
-            <ComboBoxItem>Bread</ComboBoxItem>
-            <ComboBoxItem>Whole Grain Cereal</ComboBoxItem>
-            <ComboBoxItem>Legumes</ComboBoxItem>
-            <ComboBoxItem>Beans</ComboBoxItem>
-            <ComboBoxItem>Oats</ComboBoxItem>
-            <ComboBoxItem>Rice</ComboBoxItem>
-            <ComboBoxItem>Other</ComboBoxItem>
-        </ComboBox>
-        <Label Foreground="White" Grid.Column="4" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-        <TextBox Grid.Column="4" Grid.Row="4" Height="20" Margin="5"></TextBox>
+        
+        <StackPanel Grid.Row="2" Grid.Column="0" Margin="10,0">
+            <Label Foreground="White">Select a Protein</Label>
+            <ComboBox Grid.Column="0" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Proteins" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
+                <ComboBoxItem>Chicken</ComboBoxItem>
+                <ComboBoxItem>Turkey</ComboBoxItem>
+                <ComboBoxItem>Pork</ComboBoxItem>
+                <ComboBoxItem>Meat</ComboBoxItem>
+                <ComboBoxItem>Fish</ComboBoxItem>
+                <ComboBoxItem>Eggs</ComboBoxItem>
+                <ComboBoxItem>Tofu</ComboBoxItem>
+                <ComboBoxItem>Other</ComboBoxItem>
+            </ComboBox>
+            <Label Foreground="White" Grid.Column="0" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
+            <TextBox Name="tboxProteinCalories" Grid.Column="0" Grid.Row="4" Height="20" Margin="5"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="1" Margin="10,0">
+            <Label Foreground="White">Select a Vegetable</Label>
+            <ComboBox Grid.Column="1" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Vegetables" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
+                <ComboBoxItem>Asparagus</ComboBoxItem>
+                <ComboBoxItem>Broccoli</ComboBoxItem>
+                <ComboBoxItem>Potato</ComboBoxItem>
+                <ComboBoxItem>Brussel Sprouts</ComboBoxItem>
+                <ComboBoxItem>Kale</ComboBoxItem>
+                <ComboBoxItem>Lettuce</ComboBoxItem>
+                <ComboBoxItem>Spinach</ComboBoxItem>
+                <ComboBoxItem>Beets</ComboBoxItem>
+                <ComboBoxItem>Carrots</ComboBoxItem>
+                <ComboBoxItem>Cauliflower</ComboBoxItem>
+                <ComboBoxItem>Bell Pepper</ComboBoxItem>
+                <ComboBoxItem>Other</ComboBoxItem>
+            </ComboBox>
+            <Label Foreground="White" Grid.Column="1" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
+            <TextBox Name="tboxVeggieCalories" Grid.Column="1" Grid.Row="4" Height="20" Margin="5"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="2" Margin="10,0">
+            <Label Foreground="White">Select a Fruit</Label>
+            <ComboBox Grid.Column="2" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Fruits" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
+                <ComboBoxItem>Pineapple</ComboBoxItem>
+                <ComboBoxItem>Apple</ComboBoxItem>
+                <ComboBoxItem>Blueberry</ComboBoxItem>
+                <ComboBoxItem>Pear</ComboBoxItem>
+                <ComboBoxItem>Orange</ComboBoxItem>
+                <ComboBoxItem>Grapes</ComboBoxItem>
+                <ComboBoxItem>Grapefruit</ComboBoxItem>
+                <ComboBoxItem>Watermelon</ComboBoxItem>
+                <ComboBoxItem>Banana</ComboBoxItem>
+                <ComboBoxItem>Kiwi</ComboBoxItem>
+                <ComboBoxItem>Avocado</ComboBoxItem>
+                <ComboBoxItem>Other</ComboBoxItem>
+            </ComboBox>
+            <Label Foreground="White" Grid.Column="2" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
+            <TextBox Name="tboxFruitsCalories" Grid.Column="2" Grid.Row="4" Height="20" Margin="5"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="3" Margin="10,0">
+            <Label Foreground="White">Select an Alcohol</Label>
+            <ComboBox Grid.Column="3" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Alcohol" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
+                <ComboBoxItem>Light Beer</ComboBoxItem>
+                <ComboBoxItem>Heavy Beer</ComboBoxItem>
+                <ComboBoxItem>Wine</ComboBoxItem>
+                <ComboBoxItem>Liquor</ComboBoxItem>
+                <ComboBoxItem>Other</ComboBoxItem>
+            </ComboBox>
+            <Label Foreground="White" Grid.Column="3" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
+            <TextBox Name="tboxAlcoholCalories" Grid.Column="3" Grid.Row="4" Height="20" Margin="5"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="4" Margin="10,0">
+            <Label Foreground="White">Select other</Label>
+            <ComboBox Grid.Column="4" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Misc" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
+                <ComboBoxItem>Nuts</ComboBoxItem>
+                <ComboBoxItem>Bread</ComboBoxItem>
+                <ComboBoxItem>Whole Grain Cereal</ComboBoxItem>
+                <ComboBoxItem>Legumes</ComboBoxItem>
+                <ComboBoxItem>Beans</ComboBoxItem>
+                <ComboBoxItem>Oats</ComboBoxItem>
+                <ComboBoxItem>Rice</ComboBoxItem>
+                <ComboBoxItem>Other</ComboBoxItem>
+            </ComboBox>
+            <Label Foreground="White" Grid.Column="4" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
+            <TextBox Name="tboxMiscCalories" Grid.Column="4" Grid.Row="4" Height="20" Margin="5"></TextBox>
+        </StackPanel>
     </Grid>
 </UserControl>
