--- a/Spotter_group/Nutrition.xaml
+++ b/Spotter_group/Nutrition.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+    <Grid Name="grid3">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -18,24 +18,26 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="3*"/>
-           
-           
+
+
         </Grid.RowDefinitions>
+        <!-- 
         <Menu Grid.ColumnSpan="4" Margin="0,0,0,0" Height="19" VerticalAlignment="Top" HorizontalAlignment="Left">
-            <MenuItem Header="Workout" Grid.ColumnSpan="3"></MenuItem>
-            <MenuItem Header="Nutrition" Grid.ColumnSpan="3" IsChecked="True"></MenuItem>
+            <MenuItem Header="Workout" Name="menuWorkout" Grid.ColumnSpan="3" Click="menuWorkout_Click"></MenuItem>
+            <MenuItem Header="Nutrition" Name="menuNutrition" Grid.ColumnSpan="3" IsChecked="True" Click="menuNutrition_Click"></MenuItem>
         </Menu>
-        <StackPanel Grid.Column="1" Margin="10" Grid.ColumnSpan="3">
+        -->
+        <StackPanel Margin="32,10,48,10" Grid.ColumnSpan="4">
             <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Center" FontSize="25">Calories to Consume</Label>
             <Label x:Name="lbl_CaloriesToConsume" Foreground="White" Grid.Column="4" HorizontalAlignment="Center" FontSize="30">2000</Label>
         </StackPanel>
-        
+
         <Label Foreground="White" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Proteins</Label>
         <Label Foreground="White" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center">Vegetables</Label>
         <Label Foreground="White" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center">Fruits</Label>
         <Label Foreground="White" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center">Alcohol</Label>
         <Label Foreground="White" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center">Misc</Label>
-        
+
         <StackPanel Grid.Row="2" Grid.Column="0" Margin="10,0">
             <Label Foreground="White">Select a Protein</Label>
             <ComboBox Grid.Column="0" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Proteins" Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top">
