Added button to nutrition and code for calorie count number colorization.

--- a/Spotter_group/Nutrition.xaml
+++ b/Spotter_group/Nutrition.xaml
@@ -25,6 +25,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <!-- 
         <Menu Grid.ColumnSpan="4" Margin="0,0,0,0" Height="19" VerticalAlignment="Top" HorizontalAlignment="Left">
@@ -34,7 +35,7 @@
         -->
         <StackPanel Margin="32,10,48,10" HorizontalAlignment="Stretch" Grid.Column="1" Grid.ColumnSpan="3">
             <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Center" FontSize="25">Calories to Consume</Label>
-            <Label x:Name="lbl_CaloriesToConsume" Foreground="White" Grid.Column="4" HorizontalAlignment="Center" FontSize="30">2000</Label>
+            <Label x:Name="lbl_CaloriesToConsume" Foreground="White" Grid.Column="4" HorizontalAlignment="Center" FontSize="30" ToolTip="2000"></Label>
         </StackPanel>
 
         <Label Foreground="White" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Proteins</Label>
@@ -123,5 +124,6 @@
             <Label Foreground="White" Grid.Column="4" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
             <TextBox Name="tboxMiscCalories" Grid.Column="4" Grid.Row="4" Height="20" Margin="5"></TextBox>
         </StackPanel>
+        <Button Name="btnSaveMeal" Grid.Column="1" Grid.Row="4" Grid.RowSpan="3" Click="btnSaveMeal_Click"></Button>
     </Grid>
 </UserControl>
