--- a/Spotter_group/Nutrition.xaml
+++ b/Spotter_group/Nutrition.xaml
@@ -33,9 +33,9 @@
             <MenuItem Header="Nutrition" Name="menuNutrition" Grid.ColumnSpan="3" IsChecked="True" Click="menuNutrition_Click"></MenuItem>
         </Menu>
         -->
-        <StackPanel Margin="32,10,48,10" HorizontalAlignment="Stretch" Grid.Column="1" Grid.ColumnSpan="3">
+        <StackPanel Margin="32,10,48,10" HorizontalAlignment="Stretch" Grid.Column="0" Grid.ColumnSpan="5">
             <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Center" FontSize="25">Calories to Consume</Label>
-            <TextBlock x:Name="lbl_CaloriesToConsume" Foreground="White" HorizontalAlignment="Center" FontSize="30" ToolTip="2000" Width="100" Height="41"/>
+            <TextBlock x:Name="txtBlock_CaloriesToConsume" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" ToolTip="2000" Margin="-44,0,-45,0"/>
         </StackPanel>
 
         <Label Foreground="White" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Proteins</Label>
@@ -57,7 +57,7 @@
                 <ComboBoxItem>Other</ComboBoxItem>
             </ComboBox>
             <Label Foreground="White" Grid.Column="0" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-            <TextBox Name="tboxProteinCalories" Grid.Column="0" Grid.Row="4" Height="20" Margin="5"></TextBox>
+            <TextBox Name="tboxProteinCalories" Grid.Column="0" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="1" Margin="10,0">
             <Label Foreground="White">Select a Vegetable</Label>
@@ -76,7 +76,7 @@
                 <ComboBoxItem>Other</ComboBoxItem>
             </ComboBox>
             <Label Foreground="White" Grid.Column="1" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-            <TextBox Name="tboxVeggieCalories" Grid.Column="1" Grid.Row="4" Height="20" Margin="5"></TextBox>
+            <TextBox Name="tboxVeggieCalories" Grid.Column="1" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="2" Margin="10,0">
             <Label Foreground="White">Select a Fruit</Label>
@@ -95,7 +95,7 @@
                 <ComboBoxItem>Other</ComboBoxItem>
             </ComboBox>
             <Label Foreground="White" Grid.Column="2" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-            <TextBox Name="tboxFruitsCalories" Grid.Column="2" Grid.Row="4" Height="20" Margin="5"></TextBox>
+            <TextBox Name="tboxFruitsCalories" Grid.Column="2" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="3" Margin="10,0">
             <Label Foreground="White">Select an Alcohol</Label>
@@ -107,7 +107,7 @@
                 <ComboBoxItem>Other</ComboBoxItem>
             </ComboBox>
             <Label Foreground="White" Grid.Column="3" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-            <TextBox Name="tboxAlcoholCalories" Grid.Column="3" Grid.Row="4" Height="20" Margin="5"></TextBox>
+            <TextBox Name="tboxAlcoholCalories" Grid.Column="3" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="4" Margin="10,0">
             <Label Foreground="White">Select other</Label>
@@ -122,7 +122,7 @@
                 <ComboBoxItem>Other</ComboBoxItem>
             </ComboBox>
             <Label Foreground="White" Grid.Column="4" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-            <TextBox Name="tboxMiscCalories" Grid.Column="4" Grid.Row="4" Height="20" Margin="5"></TextBox>
+            <TextBox Name="tboxMiscCalories" Grid.Column="4" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
         <Button Name="btnSaveMeal" Grid.Column="2" Grid.Row="3" Margin="15" Click="btnSaveMeal_Click">Save Meal</Button>
     </Grid>
